# seqan-research

./: .gitignore  CodeStore-vor Farbumstellung.xml  CodeStore-vor Millisekundenbeseitigung.xml  CodeStore-vor Neuerstellung der Farben.xml  CodeStore.2014-06-30T16-53-30.559+0200.xml  CodeStore.2014-08-06T14-44-34.630+0200.xml  CodeStore.2014-08-06T14-46-09.556+0200.xml  CodeStore.2014-08-06T15-01-55.081+0200.xml  CodeStore.2014-08-06T16-16-08.193+0200.xml  CodeStore.2014-08-06T16-16-55.174+0200.xml  CodeStore.2014-08-06T16-17-13.500+0200.xml  CodeStore.2014-08-08T00-46-38.743+0200.xml  CodeStore.2014-08-08T00-47-48.130+0200.xml  CodeStore.2014-08-08T00-47-59.319+0200.xml  CodeStore.2014-08-08T15-33-19.047+0200.xml  CodeStore.2014-08-08T15-33-27.662+0200.xml  CodeStore.2014-08-08T15-33-34.937+0200.xml  CodeStore.2014-08-08T15-33-36.573+0200.xml  CodeStore.2014-08-08T17-21-21.268+0200.xml  CodeStore.2014-08-08T17-21-22.819+0200.xml  CodeStore.2014-08-11T01-43-45.682+0200.xml  CodeStore.2014-08-11T02-21-18.370+0200.xml  CodeStore.2014-08-11T02-21-35.617+0200.xml  CodeStore.2014-08-11T02-21-53.643+0200.xml  CodeStore.2014-08-11T02-21-59.275+0200.xml  CodeStore.2014-08-11T02-22-08.021+0200.xml  CodeStore.2014-08-11T02-24-07.611+0200.xml  CodeStore.2014-08-11T02-24-11.721+0200.xml  CodeStore.2014-08-11T02-24-22.030+0200.xml  CodeStore.2014-08-11T02-24-24.126+0200.xml  CodeStore.2014-08-11T02-27-57.422+0200.xml  CodeStore.2014-08-11T02-29-25.758+0200.xml  CodeStore.2014-08-11T02-30-45.285+0200.xml  CodeStore.2014-08-11T02-32-27.675+0200.xml  CodeStore.2014-08-11T02-36-18.076+0200.xml  CodeStore.2014-08-11T02-37-37.320+0200.xml  CodeStore.2014-08-11T12-16-40.286+0200.xml  CodeStore.2014-08-11T12-17-11.766+0200.xml  CodeStore.2014-08-11T12-19-43.564+0200.xml  CodeStore.2014-08-11T12-23-48.206+0200.xml  (+5124 more)
raw/pmsb13/pmsb13-data-20130530/sources/130wu1dgzoqmxyu2/2013-04-12T15-45-56.400+0200/sandbox/my_sandbox/apps/das_boot/: CMakeLists.txt  CTestTestfile.cmake  INFO  Makefile  cmake_install.cmake  das_boot.cpp
raw/pmsb13/pmsb13-data-20130530/sources/130wu1dgzoqmxyu2/2013-04-24T23-24-07.145+0200/sandbox/pmsb_group4/apps/lagan_svn/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/130wu1dgzoqmxyu2/2013-05-07T18-43-16.256+0200/sandbox/my_sandbox/apps/lagan_neu/: CMakeLists.txt  lagan_neu.cpp
raw/pmsb13/pmsb13-data-20130530/sources/130wu1dgzoqmxyu2/2013-05-15T20-30-06.376+0200/sandbox/my_sandbox/tests/test_lagan/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/1lavkz23cwlw5mpd/00000005/sandbox/h4nn3s/apps/masai_h2/: CMakeLists.txt  INFO  README  index.h  indexer.cpp  mapper.cpp  options.h  pairer.cpp  sorter.cpp  stream.h  writer.h  writer_blast.h
raw/pmsb13/pmsb13-data-20130530/sources/1lavkz23cwlw5mpd/2013-05-03T11-08-25.617+0200/sandbox/h4nn3s/apps/scarlet/: CMakeLists.txt  finder.hpp  misc.hpp  options.hpp  pipeline.hpp  scarlet.cpp  scarlet.hpp
raw/pmsb13/pmsb13-data-20130530/sources/21gbd4mgnulhm130/2013-04-08T15-50-07.347+0200/sandbox/olfrik/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/21gbd4mgnulhm130/2013-04-08T15-50-07.347+0200/sandbox/olfrik/apps/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/21gbd4mgnulhm130/2013-04-08T15-50-07.347+0200/sandbox/olfrik/apps/first_app/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/21gbd4mgnulhm130/2013-04-08T15-50-07.347+0200/sandbox/olfrik/apps/first_app2/: CMakeLists.txt  INFO  first_app2.cpp
raw/pmsb13/pmsb13-data-20130530/sources/21gbd4mgnulhm130/2013-04-08T15-50-07.347+0200/sandbox/olfrik/demos/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/21gbd4mgnulhm130/2013-04-08T15-50-07.347+0200/sandbox/olfrik/tests/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/21gbd4mgnulhm130/2013-04-09T09-58-08.433+0200/sandbox/olfrik/apps/app1/: CMakeLists.txt  INFO  app1.cpp
raw/pmsb13/pmsb13-data-20130530/sources/21gbd4mgnulhm130/2013-04-11T09-28-56.925+0200/sandbox/olfrik/apps/t4Index/: CMakeLists.txt  INFO  t4Index.cpp
raw/pmsb13/pmsb13-data-20130530/sources/21gbd4mgnulhm130/2013-04-11T15-12-56.44+0200/sandbox/olfrik/apps/mini_bowtie/: CMakeLists.txt  INFO  mini_bowtie.cpp
raw/pmsb13/pmsb13-data-20130530/sources/21gbd4mgnulhm130/2013-04-26T07-23-53.48+0200/sandbox/group2/apps/seqc/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/24xc47o54r0zzgyu/2013-05-23T21-45-34.556+0200/sandbox/my_sandbox/apps/adapterStat/: CMakeLists.txt  adapterStat.cpp
raw/pmsb13/pmsb13-data-20130530/sources/427smdvbnknp0jra/2013-04-09T14-45-48.877+0200/sandbox/mysandbox/apps/fourth_app/: CMakeLists.txt  INFO  fourth_app.cpp
raw/pmsb13/pmsb13-data-20130530/sources/427smdvbnknp0jra/2013-04-09T15-26-35.245+0200/sandbox/mysandbox/apps/six_app/: CMakeLists.txt  INFO  six_app.cpp
raw/pmsb13/pmsb13-data-20130530/sources/427smdvbnknp0jra/2013-04-15T16-09-59.374+0200/sandbox/projekt_sandbox/apps/samproducer/: CMakeLists.txt  INFO  samproducer.cpp
raw/pmsb13/pmsb13-data-20130530/sources/427smdvbnknp0jra/2013-04-23T17-17-01.486+0200/sandbox/gruppe1/apps/saminput/: CMakeLists.txt  detection.cpp  detection.h
raw/pmsb13/pmsb13-data-20130530/sources/427smdvbnknp0jra/2013-05-13T12-13-13.109+0200/sandbox/gruppe1/apps/PEMer_Lite/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/427smdvbnknp0jra/2013-05-13T12-40-18.507+0200/sandbox/gruppe1/tests/PEMer_Lite_header/: CMakeLists.txt  test_PEMer_Lite_header.cpp
raw/pmsb13/pmsb13-data-20130530/sources/6ndbc4zuiueuaiyv/2013-04-09T09-58-01.809+0200/sandbox/my_sandbox/apps/demo_program/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/6ndbc4zuiueuaiyv/2013-04-09T10-37-58.499+0200/sandbox/my_sandbox/apps/assignment_2/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/6ndbc4zuiueuaiyv/2013-04-09T14-38-53.808+0200/sandbox/my_sandbox/apps/nuc_sort/: CMakeLists.txt  INFO  (+1 more)
raw/pmsb13/pmsb13-data-20130530/sources/r7njsk249ga57364/2013-05-17T22-58-29.227+0200/sandbox/my_sandbox/flexbar-trunk/: CMakeLists.txt
raw/pmsb13/pmsb13-data-20130530/sources/r7njsk249ga57364/2013-05-18T00-31-50.133+0200/sandbox/my_sandbox/: CMakeLists.txt
(+23716 files in other folders)
